// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusBadge Legacy weight: regular tone: error renders correctly 1`] = `
<div>
  <div
    class="css-1kwau38-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Error"
      class="css-1w78ld0-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M16.753 1.797a1 1 0 0 0-.712-.297H8.05a1 1 0 0 0-.706.291l-5.55 5.525a1 1 0 0 0-.294.709v7.86a1 1 0 0 0 .289.703l5.554 5.615a1 1 0 0 0 .711.297h7.896a1 1 0 0 0 .706-.291l5.55-5.525a1 1 0 0 0 .294-.709V8.02a1 1 0 0 0-.289-.703l-5.458-5.52ZM8 16l8-8M16 16 8 8"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge Legacy weight: regular tone: info renders correctly 1`] = `
<div>
  <div
    class="css-d0fvsj-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Information"
      class="css-1fy6eq9-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10Zm-10 5v-6m0-4h.01"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge Legacy weight: regular tone: neutral renders correctly 1`] = `
<div>
  <div
    class="css-1o4iv6m-boxStyles-StatusBadge"
  >
    <div
      class="css-1fa9oau-boxStyles-icon"
    />
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge Legacy weight: regular tone: success renders correctly 1`] = `
<div>
  <div
    class="css-1yao3c9-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Success"
      class="css-vvfklf-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10Z"
      />
      <path
        d="m7 13 3 3 7-7"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge Legacy weight: regular tone: warning renders correctly 1`] = `
<div>
  <div
    class="css-1t5js0n-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Warning"
      class="css-15hefj6-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3 22h18c.7 0 1.2-.8.9-1.5l-9-17.8c-.4-.7-1.4-.7-1.8 0l-9 17.8c-.3.7.2 1.5.9 1.5Zm9-8V9m0 9"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge Legacy weight: subtle tone: error renders correctly 1`] = `
<div>
  <div
    class="css-1ncy008-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Error"
      class="css-1w78ld0-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M16.753 1.797a1 1 0 0 0-.712-.297H8.05a1 1 0 0 0-.706.291l-5.55 5.525a1 1 0 0 0-.294.709v7.86a1 1 0 0 0 .289.703l5.554 5.615a1 1 0 0 0 .711.297h7.896a1 1 0 0 0 .706-.291l5.55-5.525a1 1 0 0 0 .294-.709V8.02a1 1 0 0 0-.289-.703l-5.458-5.52ZM8 16l8-8M16 16 8 8"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge Legacy weight: subtle tone: info renders correctly 1`] = `
<div>
  <div
    class="css-1ncy008-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Information"
      class="css-1fy6eq9-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10Zm-10 5v-6m0-4h.01"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge Legacy weight: subtle tone: neutral renders correctly 1`] = `
<div>
  <div
    class="css-1ncy008-boxStyles-StatusBadge"
  >
    <div
      class="css-1fa9oau-boxStyles-icon"
    />
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge Legacy weight: subtle tone: success renders correctly 1`] = `
<div>
  <div
    class="css-1ncy008-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Success"
      class="css-vvfklf-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10Z"
      />
      <path
        d="m7 13 3 3 7-7"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge Legacy weight: subtle tone: warning renders correctly 1`] = `
<div>
  <div
    class="css-1ncy008-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Warning"
      class="css-15hefj6-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3 22h18c.7 0 1.2-.8.9-1.5l-9-17.8c-.4-.7-1.4-.7-1.8 0l-9 17.8c-.3.7.2 1.5.9 1.5Zm9-8V9m0 9"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge appearance: regular tone: cannotStartLow renders correctly 1`] = `
<div>
  <div
    class="css-1o4iv6m-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Status: cannot start."
      class="css-16t9tz1-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10ZM7 12h10"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge appearance: regular tone: errorHigh renders correctly 1`] = `
<div>
  <div
    class="css-1kwau38-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Status: error."
      class="css-1w78ld0-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8.472 1h7.056c.19 0 .43-.001.665.055.204.05.399.13.578.24.206.126.375.296.509.43l.036.037 4.922 4.922.037.036c.134.134.304.303.43.51.11.178.19.373.24.577.056.236.055.475.055.665v7.056c0 .19.001.43-.055.665-.05.204-.13.399-.24.578a2.799 2.799 0 0 1-.43.509l-.037.036-4.922 4.922-.036.037a2.799 2.799 0 0 1-.51.43c-.178.11-.373.19-.577.24a2.795 2.795 0 0 1-.665.055H8.472c-.19 0-.43.001-.665-.055-.204-.05-.399-.13-.578-.24-.206-.126-.375-.296-.509-.43l-.036-.037-4.922-4.922-.036-.036c-.135-.134-.305-.303-.431-.51a1.999 1.999 0 0 1-.24-.577A2.795 2.795 0 0 1 1 15.528V8.472c0-.19-.001-.43.055-.665a2 2 0 0 1 .24-.578c.126-.206.296-.375.43-.509l.037-.036 4.922-4.922.036-.036c.134-.135.303-.305.51-.431a2 2 0 0 1 .577-.24C8.043 1 8.282 1 8.472 1Zm.235 6.293a1 1 0 1 0-1.414 1.414L10.586 12l-3.293 3.293a1 1 0 0 0 1.414 1.414L12 13.414l3.293 3.293a1 1 0 0 0 1.414-1.414L13.414 12l3.293-3.293a1 1 0 0 0-1.414-1.414L12 10.586 8.707 7.293Z"
        fill="currentColor"
        stroke="none"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge appearance: regular tone: errorLow renders correctly 1`] = `
<div>
  <div
    class="css-1o4iv6m-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Status: error."
      class="css-16t9tz1-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m16 8-4 4m0 0-4 4m4-4L8 8m4 4 4 4m6-4c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10Z"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge appearance: regular tone: errorMedium renders correctly 1`] = `
<div>
  <div
    class="css-1kwau38-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Status: error."
      class="css-1w78ld0-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M16.753 1.797a1 1 0 0 0-.712-.297H8.05a1 1 0 0 0-.706.291l-5.55 5.525a1 1 0 0 0-.294.709v7.86a1 1 0 0 0 .289.703l5.554 5.615a1 1 0 0 0 .711.297h7.896a1 1 0 0 0 .706-.291l5.55-5.525a1 1 0 0 0 .294-.709V8.02a1 1 0 0 0-.289-.703l-5.458-5.52ZM8 16l8-8M16 16 8 8"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge appearance: regular tone: inProgressLow renders correctly 1`] = `
<div>
  <div
    class="css-1o4iv6m-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Status: in progress."
      class="css-16t9tz1-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6.5 13.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3ZM12 13.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3ZM17.5 13.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3Z"
        fill="currentColor"
        stroke="none"
      />
      <path
        d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10Z"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge appearance: regular tone: infoHigh renders correctly 1`] = `
<div>
  <div
    class="css-d0fvsj-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Status: information."
      class="css-1fy6eq9-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 1C5.9 1 1 5.9 1 12s4.9 11 11 11 11-4.9 11-11S18.1 1 12 1Zm0 17a1 1 0 0 1-1-1v-6a1 1 0 1 1 2 0v6a1 1 0 0 1-1 1Zm0-10a1 1 0 1 0 0-2 1 1 0 0 0 0 2Z"
        fill="currentColor"
        stroke="none"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge appearance: regular tone: infoLow renders correctly 1`] = `
<div>
  <div
    class="css-1o4iv6m-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Status: information."
      class="css-16t9tz1-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10Zm-10 5v-6m0-4h.01"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge appearance: regular tone: infoMedium renders correctly 1`] = `
<div>
  <div
    class="css-d0fvsj-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Status: information."
      class="css-1fy6eq9-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10Zm-10 5v-6m0-4h.01"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge appearance: regular tone: notStartedLow renders correctly 1`] = `
<div>
  <div
    class="css-1o4iv6m-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Status: not started."
      class="css-16t9tz1-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10Z"
        stroke-dasharray="4 4"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge appearance: regular tone: pausedLow renders correctly 1`] = `
<div>
  <div
    class="css-1o4iv6m-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Status: paused."
      class="css-16t9tz1-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M10 16V8m4 8V8m8 4c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10Z"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge appearance: regular tone: successHigh renders correctly 1`] = `
<div>
  <div
    class="css-1yao3c9-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Status: success."
      class="css-vvfklf-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 23c6.075 0 11-4.925 11-11S18.075 1 12 1 1 5.925 1 12s4.925 11 11 11Zm5.707-13.293a1 1 0 0 0-1.414-1.414L10 14.586l-2.293-2.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"
        fill="currentColor"
        stroke="none"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge appearance: regular tone: successLow renders correctly 1`] = `
<div>
  <div
    class="css-1o4iv6m-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Status: success."
      class="css-16t9tz1-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10Z"
      />
      <path
        d="m7 13 3 3 7-7"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge appearance: regular tone: successMedium renders correctly 1`] = `
<div>
  <div
    class="css-1yao3c9-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Status: success."
      class="css-vvfklf-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10Z"
      />
      <path
        d="m7 13 3 3 7-7"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge appearance: regular tone: unknownLow renders correctly 1`] = `
<div>
  <div
    class="css-1o4iv6m-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Status: help."
      class="css-16t9tz1-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3m.08 4h.01M12 2a10 10 0 1 0 0 20 10 10 0 0 0 0-20Z"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge appearance: regular tone: warningHigh renders correctly 1`] = `
<div>
  <div
    class="css-1t5js0n-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Status: warning."
      class="css-15hefj6-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m23.1 20.1-9.3-18C13.4 1.4 12.7 1 12 1s-1.4.4-1.8 1.1l-9.3 18c-.3.6-.3 1.4.1 2 .4.6 1 1 1.7 1h18.7c.7 0 1.31-.33 1.7-1 .36-.6.3-1.4 0-2ZM12 19c-.6 0-1-.4-1-1s.4-1 1-1 1 .4 1 1-.4 1-1 1Zm1-5c0 .6-.4 1-1 1s-1-.4-1-1V9c0-.6.4-1 1-1s1 .4 1 1v5Z"
        fill="currentColor"
        stroke="none"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge appearance: regular tone: warningLow renders correctly 1`] = `
<div>
  <div
    class="css-1o4iv6m-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Status: warning."
      class="css-16t9tz1-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 7v6m0 4h-.01M2 12C2 6.477 6.477 2 12 2s10 4.477 10 10-4.477 10-10 10S2 17.523 2 12Z"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge appearance: regular tone: warningMedium renders correctly 1`] = `
<div>
  <div
    class="css-1t5js0n-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Status: warning."
      class="css-15hefj6-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3 22h18c.7 0 1.2-.8.9-1.5l-9-17.8c-.4-.7-1.4-.7-1.8 0l-9 17.8c-.3.7.2 1.5.9 1.5Zm9-8V9m0 9"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge appearance: subtle tone: cannotStartLow renders correctly 1`] = `
<div>
  <div
    class="css-1ncy008-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Status: cannot start."
      class="css-16t9tz1-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10ZM7 12h10"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge appearance: subtle tone: errorHigh renders correctly 1`] = `
<div>
  <div
    class="css-1ncy008-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Status: error."
      class="css-1w78ld0-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8.472 1h7.056c.19 0 .43-.001.665.055.204.05.399.13.578.24.206.126.375.296.509.43l.036.037 4.922 4.922.037.036c.134.134.304.303.43.51.11.178.19.373.24.577.056.236.055.475.055.665v7.056c0 .19.001.43-.055.665-.05.204-.13.399-.24.578a2.799 2.799 0 0 1-.43.509l-.037.036-4.922 4.922-.036.037a2.799 2.799 0 0 1-.51.43c-.178.11-.373.19-.577.24a2.795 2.795 0 0 1-.665.055H8.472c-.19 0-.43.001-.665-.055-.204-.05-.399-.13-.578-.24-.206-.126-.375-.296-.509-.43l-.036-.037-4.922-4.922-.036-.036c-.135-.134-.305-.303-.431-.51a1.999 1.999 0 0 1-.24-.577A2.795 2.795 0 0 1 1 15.528V8.472c0-.19-.001-.43.055-.665a2 2 0 0 1 .24-.578c.126-.206.296-.375.43-.509l.037-.036 4.922-4.922.036-.036c.134-.135.303-.305.51-.431a2 2 0 0 1 .577-.24C8.043 1 8.282 1 8.472 1Zm.235 6.293a1 1 0 1 0-1.414 1.414L10.586 12l-3.293 3.293a1 1 0 0 0 1.414 1.414L12 13.414l3.293 3.293a1 1 0 0 0 1.414-1.414L13.414 12l3.293-3.293a1 1 0 0 0-1.414-1.414L12 10.586 8.707 7.293Z"
        fill="currentColor"
        stroke="none"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge appearance: subtle tone: errorLow renders correctly 1`] = `
<div>
  <div
    class="css-1ncy008-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Status: error."
      class="css-16t9tz1-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m16 8-4 4m0 0-4 4m4-4L8 8m4 4 4 4m6-4c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10Z"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge appearance: subtle tone: errorMedium renders correctly 1`] = `
<div>
  <div
    class="css-1ncy008-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Status: error."
      class="css-1w78ld0-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M16.753 1.797a1 1 0 0 0-.712-.297H8.05a1 1 0 0 0-.706.291l-5.55 5.525a1 1 0 0 0-.294.709v7.86a1 1 0 0 0 .289.703l5.554 5.615a1 1 0 0 0 .711.297h7.896a1 1 0 0 0 .706-.291l5.55-5.525a1 1 0 0 0 .294-.709V8.02a1 1 0 0 0-.289-.703l-5.458-5.52ZM8 16l8-8M16 16 8 8"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge appearance: subtle tone: inProgressLow renders correctly 1`] = `
<div>
  <div
    class="css-1ncy008-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Status: in progress."
      class="css-16t9tz1-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6.5 13.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3ZM12 13.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3ZM17.5 13.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3Z"
        fill="currentColor"
        stroke="none"
      />
      <path
        d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10Z"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge appearance: subtle tone: infoHigh renders correctly 1`] = `
<div>
  <div
    class="css-1ncy008-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Status: information."
      class="css-1fy6eq9-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 1C5.9 1 1 5.9 1 12s4.9 11 11 11 11-4.9 11-11S18.1 1 12 1Zm0 17a1 1 0 0 1-1-1v-6a1 1 0 1 1 2 0v6a1 1 0 0 1-1 1Zm0-10a1 1 0 1 0 0-2 1 1 0 0 0 0 2Z"
        fill="currentColor"
        stroke="none"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge appearance: subtle tone: infoLow renders correctly 1`] = `
<div>
  <div
    class="css-1ncy008-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Status: information."
      class="css-16t9tz1-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10Zm-10 5v-6m0-4h.01"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge appearance: subtle tone: infoMedium renders correctly 1`] = `
<div>
  <div
    class="css-1ncy008-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Status: information."
      class="css-1fy6eq9-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10Zm-10 5v-6m0-4h.01"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge appearance: subtle tone: notStartedLow renders correctly 1`] = `
<div>
  <div
    class="css-1ncy008-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Status: not started."
      class="css-16t9tz1-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10Z"
        stroke-dasharray="4 4"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge appearance: subtle tone: pausedLow renders correctly 1`] = `
<div>
  <div
    class="css-1ncy008-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Status: paused."
      class="css-16t9tz1-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M10 16V8m4 8V8m8 4c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10Z"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge appearance: subtle tone: successHigh renders correctly 1`] = `
<div>
  <div
    class="css-1ncy008-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Status: success."
      class="css-vvfklf-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 23c6.075 0 11-4.925 11-11S18.075 1 12 1 1 5.925 1 12s4.925 11 11 11Zm5.707-13.293a1 1 0 0 0-1.414-1.414L10 14.586l-2.293-2.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"
        fill="currentColor"
        stroke="none"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge appearance: subtle tone: successLow renders correctly 1`] = `
<div>
  <div
    class="css-1ncy008-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Status: success."
      class="css-16t9tz1-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10Z"
      />
      <path
        d="m7 13 3 3 7-7"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge appearance: subtle tone: successMedium renders correctly 1`] = `
<div>
  <div
    class="css-1ncy008-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Status: success."
      class="css-vvfklf-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10Z"
      />
      <path
        d="m7 13 3 3 7-7"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge appearance: subtle tone: unknownLow renders correctly 1`] = `
<div>
  <div
    class="css-1ncy008-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Status: help."
      class="css-16t9tz1-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3m.08 4h.01M12 2a10 10 0 1 0 0 20 10 10 0 0 0 0-20Z"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge appearance: subtle tone: warningHigh renders correctly 1`] = `
<div>
  <div
    class="css-1ncy008-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Status: warning."
      class="css-15hefj6-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m23.1 20.1-9.3-18C13.4 1.4 12.7 1 12 1s-1.4.4-1.8 1.1l-9.3 18c-.3.6-.3 1.4.1 2 .4.6 1 1 1.7 1h18.7c.7 0 1.31-.33 1.7-1 .36-.6.3-1.4 0-2ZM12 19c-.6 0-1-.4-1-1s.4-1 1-1 1 .4 1 1-.4 1-1 1Zm1-5c0 .6-.4 1-1 1s-1-.4-1-1V9c0-.6.4-1 1-1s1 .4 1 1v5Z"
        fill="currentColor"
        stroke="none"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge appearance: subtle tone: warningLow renders correctly 1`] = `
<div>
  <div
    class="css-1ncy008-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Status: warning."
      class="css-16t9tz1-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 7v6m0 4h-.01M2 12C2 6.477 6.477 2 12 2s10 4.477 10 10-4.477 10-10 10S2 17.523 2 12Z"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;

exports[`StatusBadge appearance: subtle tone: warningMedium renders correctly 1`] = `
<div>
  <div
    class="css-1ncy008-boxStyles-StatusBadge"
  >
    <svg
      aria-hidden="false"
      aria-label="Status: warning."
      class="css-15hefj6-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3 22h18c.7 0 1.2-.8.9-1.5l-9-17.8c-.4-.7-1.4-.7-1.8 0l-9 17.8c-.3.7.2 1.5.9 1.5Zm9-8V9m0 9"
      />
    </svg>
    <span
      class="css-165srpg-boxStyles-StatusBadge"
    >
      Example
    </span>
  </div>
</div>
`;
